--- a/demo-arh-001.html
+++ b/demo-arh-001.html
@@ -2,8 +2,8 @@
 
 <html>
 <body>
-    <h1>Button Juice = Date & Time</h1>
-    <button onclick="document.getElementById('btn001').innerHTML = Date()">Date()</button>
+    <h1>Time and Cryptic Knowledge According to The Torpid Cat</h1>
+    <button onclick="document.getElementById('btn001').innerHTML = Date()">this.dot.point.that</button>
     <p id="btn001"></p>
 </body>
 </html>
