--- a/demo-arh-001.html
+++ b/demo-arh-001.html
@@ -3,7 +3,7 @@
 <html>
 <body>
     <h1>Time and Cryptic Knowledge According to The Torpid Cat</h1>
-    <button onclick="document.getElementById('btn001').innerHTML = Date()">this.dot.point.that</button>
+    <button onclick="document.getElementById('btn001').innerHTML = Date()">this.dot.point.that.com</button>
     <p id="btn001"></p>
 </body>
 </html>
